fix podcast image ar on mobile

--- a/src/assets/styles/sections/_03-podcasts.scss
+++ b/src/assets/styles/sections/_03-podcasts.scss
@@ -39,6 +39,7 @@ body[data-theme] {
     flex-direction: column;
     padding: calc(var(--grid-unit) * 2);
     gap: calc(var(--grid-unit) * 2);
+    aspect-ratio: 1;
     > img {
         object-fit: unset !important;
         width: 100%;
